2007-06-06  Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly/commit.py:
	* pycvsanaly/repository.py:
	* pycvsanaly/tables.py:
	* pycvsanaly/plugins/graphs/intermediate_tables.py:
	* pycvsanaly/plugins/graphs/tables_skeleton.py:

	"state" field replaced by a bool field called "removed", which is
	True if the file has been removed in that revision and False
	otherwise. The "inAttic" field (removed some revisions ago) was
	used by the graphs plugin, but was not longer present in the
	database because it was replaced by "state". That plugin has been
	updated to use the new "removed" plugin. All the plugins have been
	tested to work with this new change.
	
2007-06-05  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:
	* pycvsanaly/main.py:

	Review command line options. Old options have been kept for backward
	compatibility, but they are deprecated and not shown in usage message.
	cvsanaly usage has changed, take a look at cvsanaly --help. Analyze
	svn repositories by directly using the repo url is now supported. 
	Fixes bugs #284 and #288.

2007-06-05  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* setup.py: 

	Install manpage under $prefix instead of /usr

2007-05-10  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* pycvsanaly/commit.py:
	* pycvsanaly/files.py:
	* pycvsanaly/main.py:
	* pycvsanaly/repository.py:
	* pycvsanaly/tables.py:
	* setup.py:

	Fixing bug #268. Some information in the database was incorrect.
	
2007-04-23  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>

	* setup.py:
	* cvsanaly.1:
	* MANIFEST.in:

	Added installation of the man page using Python distutils. A little 
	hack in the setup.py file was needed.

2007-04-23  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>

	* pycvsanaly/repository.py:
	* pycvsanaly/main.py:

	Create repository objects based on logfile instead of checkout dir
	when a logfile is provided. Fixes bug #247.

2007-04-20  Israel Herraiz  <herraiz@gsyc.escet.urjc.es>
